<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="score_a">0</string>
    <string name="a_points_3">+3 Points</string>
    <string name="a_points_2">+2 Points</string>
    <string name="a_free_throw">Free Throw</string>
    <string name="team_b">Team B</string>
    <string name="score_b">0</string>
    <string name="b_points_3">+3 Points</string>
    <string name="b_points_2">+2 Points</string>
    <string name="b_free_throw">Free Throw</string>
    <string name="reset">reset</string>

</resources>
