<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nbafinals2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/goldenstate"
                android:alpha=".85"/>

            <TextView
                android:id="@+id/score_a_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score_a"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:gravity="center_horizontal"
                android:textSize="56sp"
                android:textColor="#0000FF"
                android:fontFamily="sans-serif"/>

            <Button
                android:id="@+id/points_3_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/a_points_3"
                android:alpha=".8"
                android:onClick="addThreeforTeamA"/>

            <Button
                android:id="@+id/points_2_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_points_2"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:alpha=".8"
                android:onClick="addTwoforTeamA"/>

            <Button
                android:id="@+id/free_throw_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_free_throw"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:alpha=".8"
                android:onClick="addOneforTeamA"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/cavaliers"
                android:alpha=".85"/>


            <TextView
                android:id="@+id/score_b_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score_b"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:gravity="center_horizontal"
                android:textSize="56sp"
                android:textColor="#800000"
                android:fontFamily="sans-serif"/>

            <Button
                android:id="@+id/b_points_3_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_points_3"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:alpha=".8"
                android:onClick="addThreeforTeamB"/>

            <Button
                android:id="@+id/b_points_2_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_points_2"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:alpha=".8"
                android:onClick="addTwoforTeamB"/>

            <Button
                android:id="@+id/b_free_throw_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_free_throw"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:alpha=".8"
                android:onClick="addOneforTeamB"/>
        </LinearLayout>



    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:alpha=".8"
        android:onClick="resetScore"/>
</RelativeLayout>



